--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <body id="pg-index" class="page-index body--home">
   	<script type="text/javascript">
       document.addEventListener("DOMContentLoaded", function(event) {
+        var logo = document.getElementById("logo_homepage_link");
+        logo.style.backgroundImage = "url(/ddg.png)";
         var search = document.getElementById("search_form_input_homepage");
         search.onkeypress = function(e) {
           e = e || window.event;
