--- a/index.html
+++ b/index.html
@@ -23,14 +23,26 @@
     <meta property="og:title" content="DuckDuckGo" />
     <meta property="og:description" content="DuckDuckGo is the search engine that doesn't track you. We protect your search history from everyone – even us!">
     <meta name="description" content="DuckDuckGo is the search engine that doesn't track you. We protect your search history from everyone – even us!">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
   </head>
   <body id="pg-index" class="page-index body--home">
+    <style>
+      #duckduckgo {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 32px;
+        color: #4C4C4C;
+        font-weight: 400;
+        text-align: center;
+      }
+    </style>
   	<script type="text/javascript">
       document.addEventListener("DOMContentLoaded", function(event) {
         var logo = document.getElementById("logo_homepage_link");
-        logo.style.backgroundImage = "url(/ddg.png)";
-        logo.style.height = "200px";
-        logo.style.width = "200px";
+        logo.style.backgroundImage = "url(http://duckduckbordeaux.com/ddg.png)";
+        // logo.style.height = "100%;";
+        // logo.style.width = "100%;";
+        logo.style.backgroundSize = "210px 140px";
+
         var search = document.getElementById("search_form_input_homepage");
         search.onkeypress = function(e) {
           e = e || window.event;
@@ -52,6 +64,7 @@
         				About DuckDuckGo
         				<span class="logo_homepage__tt">Duck it!</span>
         			</a>
+              <div id="duckduckgo">DuckDuckBordeaux</div>
 		        </div>
 
       			<div class="search-wrap--home">
@@ -65,7 +78,7 @@
             <div class="tag-home">
               <div class="tag-home__wrapper">
                 <div class="tag-home__item">
-                  The search engine that doesn't track you.
+                  The search engine that doesn't judge you.
                   <span class="hide--screen-xs"><a href="https://duckduckgo.com/about" class="tag-home__link">Learn More</a>.</span>
                 </div>
               </div>
