--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
   	<script type="text/javascript">
       document.addEventListener("DOMContentLoaded", function(event) {
         var logo = document.getElementById("logo_homepage_link");
-        logo.style.backgroundImage = "url(http://duckduckbordeaux.com/ddg.png)";
-        // logo.style.height = "100%;";
-        // logo.style.width = "100%;";
+        logo.style.backgroundImage = "url(http://duckduckbordeaux.com/ddg2.png)";
         logo.style.backgroundSize = "210px 140px";
 
         var search = document.getElementById("search_form_input_homepage");
