lighten up the copyright

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         bottom: 25px;
         width: 100%;
         text-align: center;
-        color: #4C4C4C;
+        color: #9A9A9A;
       }
     </style>
   	<script type="text/javascript">
