--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       	</div>
       </div>
       <div id="footer_homepage" class="foot-home  js-foot-home"></div>
-      <div id="copyright">Dax (the DuckDuckGo mascot), the word “DuckDuckGo”, and all related terrible puns are copyrighted by <a href="https://duckduckgo.com">DuckDuckGo</a></div>
+      <div id="copyright">Dax (the DuckDuckGo mascot), the word “DuckDuckGo”, and all terrible "DuckDuckGo" puns are copyrighted by <a href="https://duckduckgo.com">DuckDuckGo</a></div>
     </div>
   </body>
 </html>
