--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         text-align: center;
         color: #9A9A9A;
       }
+
+      @media (max-width: 500px) {
+        #copyright {
+           display: none;
+        }
+      }
     </style>
   	<script type="text/javascript">
       document.addEventListener("DOMContentLoaded", function(event) {
